cmake_minimum_required(VERSION 3.12)
project(cpp_test123)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_test123 main.cpp)
add_executable(AandB AandB.cpp)
add_executable(Lambda_test Lambda_test.cpp)
add_executable(func_test func_test.cpp)
add_executable(mm mm.cpp)
add_executable(extern_test extern_test.cpp)
add_executable(yunsuan yunsuan.cpp)
add_executable(loop_test loop_test.cpp)