cmake_minimum_required(VERSION 3.12)
project(cpp_test123)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_test123 main.cpp)
add_executable(AandB AandB.cpp )
add_executable(point_test point_test.cpp)
add_executable( char_test.cpp char_test.cpp)
add_executable(Array_test Array_test.cpp)
add_executable(Cos_test Cos_test.cpp)
add_executable(Number_test Number_test.cpp)
add_executable(Lambda_test Lambda_test.cpp)
add_executable(func_test func_test.cpp)
add_executable(mm mm.cpp)
add_executable(extern_test extern_test.cpp)
add_executable(yunsuan yunsuan.cpp)
add_executable(loop_test loop_test.cpp)