cmake_minimum_required(VERSION 3.12)
project(cpp_test123)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_test123 main.cpp)
add_executable(AandB AandB.cpp )
add_executable( exp_my_test exp_my_test.cpp)
add_executable(exp_test exp_test.cpp)
add_executable(file_struct_io file_struct_io.cpp)
add_executable(file_write2 file_write2.cpp)
add_executable(file_write file_write.cpp)
add_executable(file_read file_read.cpp)
add_executable(file_io_test file_io_test.cpp)
add_executable(abstract_test abstract_test.cpp)
add_executable(package_test package_test.cpp)
add_executable(data_abstract_test data_abstract_test.cpp)
add_executable(impl_test impl_test.cpp)
add_executable(reload_test2 reload_test2.cpp)
add_executable(reload_test reload_test.cpp)
add_executable( extends_test extends_test.cpp)
add_executable(class_test class_test.cpp)
add_executable(typeof_test typeof_test.cpp)
add_executable( structure_test structure_test.cpp)
add_executable(io_template io_template.cpp)
add_executable(io_test io_test.cpp)
add_executable(time_test time_test.cpp)
add_executable(ref_test ref_test.cpp)
add_executable(point_test point_test.cpp)
add_executable( char_test.cpp char_test.cpp)
add_executable(Array_test Array_test.cpp)
add_executable(Cos_test Cos_test.cpp)
add_executable(Number_test Number_test.cpp)
add_executable(Lambda_test Lambda_test.cpp)
add_executable(func_test func_test.cpp)
add_executable(mm mm.cpp)
add_executable(extern_test extern_test.cpp)
add_executable(yunsuan yunsuan.cpp)
add_executable(loop_test loop_test.cpp)